--- a/Diccionario de Entrada.html
+++ b/Diccionario de Entrada.html
@@ -7,9 +7,10 @@
 
 <h1><strong>ninja</strong></h1>
 
-<img src="pro.png" alt="">
+<img src="pro.png" alt="ninje">
 
-<p><em></strong>noun</em></p>
+<p><em>noun</em></p>
+
 <ol>
     <li> A practicar skilled in the japenese art of ninjutsu</li>
     <li>A programmer who breaks down problems with zen-like focus</li>
