--- a/Diccionario de Entrada.html
+++ b/Diccionario de Entrada.html
@@ -9,7 +9,7 @@
 
 <img src="pro.png" alt="ninje">
 
-<p><em>noun</em></p>
+<p><em><strong>noun</em></strong></p>
 
 <ol>
     <li> A practicar skilled in the japenese art of ninjutsu</li>
